tests/snapshots/trace_solver@8760658277588450161.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: false
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    always_inspect_bm: false
  bundle_name: ~
  request: "[&ref mut x]: &mut [T]"
---
[&ref mut x] @ s: &mut [T]
// Applying rule `ConstructorRef`
&ref mut x @ &mut (*s).0: &mut T
// Applying rule `DerefMutWithShared`
ref mut x @ *&*&mut (*s).0: T
// Applying rule `BindingBorrow`
x @ &mut *&*&mut (*s).0: &mut T
// Applying rule `Binding`
let x: &mut T = &mut *&*&mut (*s).0

// Final bindings (simplified):
let x: &mut T = &mut *&(*s).0; // Borrow-check error: MutBorrowBehindSharedBorrow
